All the things init

--- a/Mission6/Views/Home/Index.cshtml
+++ b/Mission6/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">The Joel Hilton Film Collection</h1>
+    <br />
+    <img src="img/JoelHiltonHeadshot.jpg" alt="Joel Hilton" />
+    <br />
+    <br />
+    <br />
+    <a class="btn btn-primary" asp-controller="Home" asp-action="GetToKnowJoel">Get to Know Joel</a>
 </div>
